package com.example.fooddelivery.domain;

public enum PaymentMethod {
    STRIPE,
    PAYPAL,
    CASH_ON_DELIVERY
}

